<resources>
    <string name="app_name">MembersManager</string>
    <string name="textview.text.welcome_to_asiantech_inc_family">Welcome To AsianTech Family</string>
    <string name="edittext.hint.last_name">Tên đăng nhập</string>
    <string name="edittext.hint.email">Tên đăng nhập</string>
    <string name="edittext.hint.password">Mật khẩu</string>
    <string name="button.text.sign_in">Đăng nhập</string>
    <string name="button.text.new_here_sign_up">Đăng ký</string>
    <string name="button.text.forgot_password">Quên mật khẩu</string>
    <string name="edittext.hint.confirm_password">Xác nhận mật khẩu</string>
    <string name="button.text.sign_up">Đăng ký</string>
    <string name="textview.text.register_account">Đăng ký</string>
    <string name="textview.text.forgot_your_password">Quên mật khẩu</string>
    <string name="button.text.reset_password">Tạo lại mật khẩu</string>

    <string name="error_invalid_email">Mail không chính xác</string>
    <string name="error_invalid_password">Mật khẩu quá ngắn</string>
    <string name="error_invalid_confirm_password">Mật khẩu xác nhận không đúng</string>
    <string name="error_incorrect_password">Mật khẩu chính xác</string>
    <string name="error_field_required">This field is required</string>
    <string name="hint_name">Email</string>
    <string name="drawer_open">Mở</string>
    <string name="drawer_close">Đóng</string>

    <!--spinner when register-->
    <string-array name="array_team">
        <item>Android</item>
        <item>Comter</item>
        <item>Designer</item>
        <item>Game</item>
        <item>Ios</item>
        <item>Java.Net</item>
        <item>Japan</item>
        <item>Office</item>
        <item>Php</item>
        <item>Ruby</item>
        <item>Tester</item>
    </string-array>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <!--navigation items-->
    <string name="nav_item_home">Trang chủ</string>
    <string name="nav_item_friends">Bạn bè</string>
    <string name="nav_item_notifications">Tin nhắn</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_favorite">Tin nổi bật</string>
    <string name="title_detail">Chi tiết</string>
    <string name="test_name">William Wilburfoce</string>
    <string name="test_email">williamwilburfoce@gmail.com</string>
    <string name="menu_favorite">Thông báo ghi chú</string>
    <string name="time_sheet">Thời gian biểu</string>
    <string name="out_work">Nghỉ phép</string>
    <string name="help_feedback">Trợ giúp và phản hồi</string>
    <string name="logout">Đăng xuất</string>
    <string name="home">Trang chủ</string>
    <string name="hot">Tin quan trọng</string>
    <string name="vacation_day">Nghỉ phép</string>
    <string name="profile">Trang cá nhân</string>
    <string name="textview.delete">Xóa</string>
    <string name="textview.share">Chia sẻ</string>
    <string name="input_email">Gửi đến mail...</string>
    <string name="to_email">To:</string>
    <string name="cc_email">Cc:</string>
    <string name="subject">Subject:</string>
    <string name="test_reson">Sắp làm đám cưới, xin nghỉ phép để đi chụp hình ngoại cảnh với người yêu, thử đồ cưới, nghỉ tuần trăng mật, làm tiệc đám cưới, khao đãi bạn bè nhậu.</string>
    <string name="test_reson_demo">Dự án rãnh, xin phép nghỉ đi chơi cùng gia đình từ ngày 1 tới ngày 10</string>
    <string name="test_different_reson">   Lý do khác </string>
    <string name="description_project">Tình trạng dự án đang tham gia</string>
    <string name="submit">Xác nhận</string>
    <string name="tv.from">Từ:</string>
    <string name="tv.mail">new@gmail.com</string>
    <string name="tv.to">Đến:</string>
    <string name="tv.date">Ngày:</string>
    <string name="tv.ViewDetails">Xem chi tiết</string>
    <string name="tv.inviViewDetails">Ẩn xem chi tiết</string>
    <string name="from_day">Từ ngày</string>
    <string name="to_day">Đến ngày</string>
    <string name="day_test">12/10/2015</string>
    <string name="my_profile">Hồ sơ của tôi</string>
    <string name="test_team">Android</string>
    <string name="info_use">Personal information</string>
    <string name="test_dbo">Day of birth</string>
    <string name="test_dob">Ngày 28 tháng 02 năm 1993</string>
    <string name="test_language">Language</string>
    <string name="test_info_language">Tiếng Việt</string>
    <string name="test_info_language_eng">Tiếng Anh</string>
    <string name="test_city">City</string>
    <string name="test_info_city">Đà Nẵng</string>
    <string name="test_full_name">Full name</string>
    <string name="test_full_name_info">Huỳnh Lê Bá Vinh</string>
    <string name="test_country">Country</string>
    <string name="test_info_country">Việt Nam</string>
    <string name="info_contact">Contact information</string>
    <string name="test_email_contact">Mail address</string>
    <string name="test_mail_info">vinhhlb@asiantech.vn</string>
    <string name="test_phone_num">Phone number</string>
    <string name="test_info_phone_num">0986331875</string>
    <string name="test_git_mail">Githup address</string>
    <string name="test_home_phone_num">Home phone number</string>
    <string name="test_info_phone_num_home">0511 367 3773</string>
    <string name="info_company">Asiantech\'s member infomation</string>
    <string name="test_position">Position</string>
    <string name="test_position_info">Android dev</string>
    <string name="test_num_dayoff">Number of Dayoff</string>
    <string name="test_dayoff_info">10</string>
    <string name="back">back</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="edt_profile">Chỉnh sửa thông tin cá nhân</string>
    <string name="hot_detail">Chi tiết thông báo quan trọng</string>
    <string name="edit_profile">Chỉnh sửa thông tin</string>
    <string name="take_photo">Chụp hình mới</string>
    <string name="choose_photo">Tải ảnh lên</string>
    <string name="cancel">Thoát</string>
    <string name="title_favorite_delete">RemoveDelete</string>
    <string name="detail">Chi tiết thông báo</string>
    <string name="unread">Còn 2 tin ...</string>
    <string name="test_num_day">Số ngày nghỉ còn lại: 10</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="Success">Đăng nhập thành công</string>
    <string name="Loading">Đang đăng nhập</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="num_day_off">Số ngày nghỉ</string>
    <string name="skype_address">Địa chỉ skype</string>
    <string name="github_address">Địa chỉ github</string>
    <string name="position">Chức vụ</string>
    <string name="mail_address">Địa chỉ mail</string>
    <string name="phone_address">Số điện thoại</string>
    <string name="birthday">Ngày sinh</string>
    <string name="name">Họ và tên</string>
    <string name="old_pass">Mật khẩu cũ</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="confirm_old_pass">Nhập lại mật khẩu mới</string>
    <string name="confirm">Xác nhận</string>
    <string name="maximun_character">Tối đa 1000 ký tự</string>
    <string name="Comments">Comments</string>
    <string name="front">front</string>
</resources>
